--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
     <title>Centilio Device Management Service</title>
   </head>
   <body>
+    <header><img src="/img/logo.png" alt="Centilio Logo"></header>
     {{{body}}}
   </body>
 </html>
